--- a/app/src/main/res/layout/act_sport_class_list.xml
+++ b/app/src/main/res/layout/act_sport_class_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/list_title"
+            android:id="@+id/classList_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/theme_color_deep"
@@ -20,7 +20,7 @@
             app:titleTextColor="@color/white" />
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/list_tab"
+            android:id="@+id/classList_tab"
             android:layout_width="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@color/white"
@@ -32,8 +32,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/list_content"
+    <com.example.belief.ui.NoScrollViewPager
+        android:id="@+id/classList_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
