--- a/app/src/main/res/layout/sport_main_part1.xml
+++ b/app/src/main/res/layout/sport_main_part1.xml
@@ -10,13 +10,14 @@
         android:gravity="center_vertical"
         android:background="@color/bg_white">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/circle"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/user_head"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/white"/>
+            android:src="@drawable/unlogined" />
 
         <LinearLayout
             android:layout_width="match_parent"
