--- a/app/src/main/res/layout/sport_main_part3.xml
+++ b/app/src/main/res/layout/sport_main_part3.xml
@@ -29,6 +29,7 @@
                 android:background="@drawable/circle"/>
 
             <Button
+                android:id="@+id/bt_addClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
@@ -56,12 +57,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bt_classList"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
         android:gravity="center">
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="查看全部"
