修改了layout的命名

--- a/app/src/main/res/Layouts/comm/layout/act_comm_amain.xml
+++ b/app/src/main/res/Layouts/comm/layout/act_comm_amain.xml
@@ -6,8 +6,8 @@
 
     <!--怎么让它自动下去-->
 
-    <include layout="@layout/community_1"/>
+    <include layout="@layout/comm_part"/>
 
-    <include layout="@layout/community_1"/>
+    <include layout="@layout/comm_part"/>
 
 </LinearLayout>
