--- a/app/src/main/res/Layouts/user/layout/farg_user_main.xml
+++ b/app/src/main/res/Layouts/user/layout/farg_user_main.xml
@@ -159,7 +159,7 @@
             </LinearLayout>
 
         </LinearLayout>
-        <include layout="@layout/user_part1"/>
+        <include layout="@layout/user_part"/>
 
     </LinearLayout>
 
