--- a/app/src/main/res/Layouts/search/layout/act_search_amain.xml
+++ b/app/src/main/res/Layouts/search/layout/act_search_amain.xml
@@ -121,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-       <include layout="@layout/information"/>
+        <include layout="@layout/search_part"/>
 
 
     </LinearLayout>
@@ -135,7 +135,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include layout="@layout/information"/>
+        <include layout="@layout/search_part"/>
 
 
     </LinearLayout>
