--- a/app/src/main/res/Layouts/search/layout/act_search_dietguide_main.xml
+++ b/app/src/main/res/Layouts/search/layout/act_search_dietguide_main.xml
@@ -29,7 +29,7 @@
             android:background="@drawable/line_solid" />
     </LinearLayout>
 
-    <include layout="@layout/stablefood"/>
+    <include layout="@layout/dietguide_part"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,7 +86,7 @@
             android:background="@drawable/line_solid" />
     </LinearLayout>
 
-    <include layout="@layout/stablefood"/>
+    <include layout="@layout/dietguide_part"/>
 
     <!--按钮-->
     <LinearLayout
@@ -144,7 +144,7 @@
             android:background="@drawable/line_solid" />
     </LinearLayout>
 
-    <include layout="@layout/stablefood" />
+    <include layout="@layout/dietguide_part" />
 
     <LinearLayout
         android:layout_width="match_parent"
