--- a/app/src/main/res/Layouts/comm/layout/act_comm_dynamic_main.xml
+++ b/app/src/main/res/Layouts/comm/layout/act_comm_dynamic_main.xml
@@ -19,7 +19,7 @@
             android:layout_marginLeft="30dp"
             android:scaleX="0.6"
             android:scaleY="0.6"
-            android:src="@drawable/ic_left"/>
+            android:src="@drawable/ic_g_left"/>
 
         <TextView
             android:layout_width="wrap_content"
