--- a/app/src/main/res/Layouts/search/layout/act_search_amain.xml
+++ b/app/src/main/res/Layouts/search/layout/act_search_amain.xml
@@ -4,17 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/top_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="80dp"-->
-        <!--android:background="@color/theme_color_shallow"-->
-        <!--app:title="发现美食"-->
-        <!--app:titleTextColor="@color/white"-->
-        <!--app:titleMarginStart="75dp">-->
-    <!--</android.support.v7.widget.Toolbar>-->
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:background="@color/theme_color_deep"
+        app:title="@string/top_title_recipe"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="150dp">
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
