--- a/app/src/main/res/Layouts/sport/layout/frag_sport_main.xml
+++ b/app/src/main/res/Layouts/sport/layout/frag_sport_main.xml
@@ -7,6 +7,17 @@
     android:id="@+id/frag_sport"
    >
 
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/top_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:background="@color/theme_color_deep"
+        app:title="@string/top_title_sport"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="150dp"/>
+
     <LinearLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
