--- a/app/src/main/res/Layouts/comm/layout/act_comm_amain.xml
+++ b/app/src/main/res/Layouts/comm/layout/act_comm_amain.xml
@@ -2,11 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:gravity="center_vertical"
+        android:background="@color/theme_color_deep">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/top_title_comm"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="130dp" />
+
+        <ImageView
+            android:id="@+id/bt_addShare"
+            android:layout_width="35dp"
+            android:layout_height="31dp"
+            android:layout_marginLeft="120dp"
+            android:src="@drawable/ic_share" />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rec_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
