--- a/app/src/main/res/Layouts/units/layout/tablayout_list.xml
+++ b/app/src/main/res/Layouts/units/layout/tablayout_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/list_showclass"
+        android:id="@+id/tablayout_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
