--- a/app/src/main/res/Layouts/search/layout/act_search_amain.xml
+++ b/app/src/main/res/Layouts/search/layout/act_search_amain.xml
@@ -24,7 +24,7 @@
         <ImageView
             android:layout_width="360dp"
             android:layout_height="120dp"
-            android:background="@color/icon_gray" />
+            android:src="@drawable/recipe_title" />
 
     </LinearLayout>
 
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/circle2" />
+                android:background="@drawable/circle_blue" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -63,15 +63,16 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/recipe_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/circle2" />
+                android:background="@drawable/circle_pink" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/diet_guide" />
+                android:text="菜谱" />
         </LinearLayout>
 
 
@@ -84,15 +85,16 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/recipe_ku"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/circle2" />
+                android:background="@drawable/circle_green" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/diet_guide" />
+                android:text="食物库" />
 
         </LinearLayout>
     </LinearLayout>
@@ -111,7 +113,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="22dp"
-            android:layout_marginStart="35dp"
+            android:layout_marginLeft="35dp"
             android:text="@string/everyone_wactching"/>
     </LinearLayout>
 
@@ -120,7 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include layout="@layout/search_part"/>
+        <include layout="@layout/information"/>
 
 
     </LinearLayout>
@@ -129,14 +131,5 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:background="@color/tiao"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <include layout="@layout/search_part"/>
-
-
-    </LinearLayout>
 
 </LinearLayout>
