--- a/app/src/main/res/Layouts/units/layout/tablayout_view.xml
+++ b/app/src/main/res/Layouts/units/layout/tablayout_view.xml
@@ -11,16 +11,15 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/classList_title"
+            android:id="@+id/tablayout_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/theme_color_deep"
-            app:navigationIcon="@drawable/qmui_icon_topbar_back"
             app:titleMarginStart="110dp"
             app:titleTextColor="@color/white" />
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/classList_tab"
+            android:id="@+id/tablayout_tab"
             android:layout_width="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@color/white"
@@ -33,7 +32,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <com.example.belief.ui.NoScrollViewPager
-        android:id="@+id/classList_content"
+        android:id="@+id/tablayout_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
