--- a/app/src/main/res/Layouts/user/layout/register.xml
+++ b/app/src/main/res/Layouts/user/layout/register.xml
@@ -6,15 +6,15 @@
     android:gravity="center_horizontal">
 
     <android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/top_toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/theme_color_deep"
-    app:title="登陆"
-    app:titleTextColor="@color/white"
-    app:titleMarginStart="150dp">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/top_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/theme_color_deep"
+        app:title="注册"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="150dp">
 
     </android.support.v7.widget.Toolbar>
 
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:textSize="23sp"
         android:hint="输入账号"
-        android:id="@+id/login_un"/>
+        android:id="@+id/register_un"/>
 
     <EditText
         android:layout_width="350dp"
@@ -32,19 +32,21 @@
         android:textSize="23sp"
         android:hint="输入密码"
         android:layout_marginTop="20dp"
-        android:id="@+id/login_pw"/>
+        android:id="@+id/register_pw"/>
+
+    <EditText
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:textSize="23sp"
+        android:hint="重复密码"
+        android:layout_marginTop="20dp"
+        android:id="@+id/register_repw"/>
 
     <Button
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
-        android:text="立即登录"
-        android:id="@+id/bt_login"/>
+        android:text="注册"
+        android:id="@+id/bt_register"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/bt_toRegister"
-        android:text="注册账号"/>
 </LinearLayout>
