--- a/app/src/main/res/Layouts/user/layout/user_part.xml
+++ b/app/src/main/res/Layouts/user/layout/user_part.xml
@@ -10,7 +10,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/bt_myClass">
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,7 +19,6 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:id="@+id/bt_myClass"
             android:text="@string/course"
             android:textSize="20sp" />
 
@@ -42,30 +42,31 @@
 
     <!--我的饮食-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/bt_myRecipes">-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/diet"
-            android:textSize="20sp" />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="50dp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:text="收藏食谱"-->
+            <!--android:textSize="20sp" />-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:scaleX="0.6"
-            android:scaleY="0.6"
-            android:src="@drawable/ic_right_b" />
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="150dp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:scaleX="0.6"-->
+            <!--android:scaleY="0.6"-->
+            <!--android:src="@drawable/ic_right_b" />-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
@@ -77,7 +78,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/bt_exit">
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,7 +87,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="@string/favorite"
+            android:text="退出登陆"
             android:textSize="20sp" />
 
         <ImageView
