--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="font_gray">#cccccc</color>
     <color name="tiao">#EBF0F2</color>
     <color name="black_effective">#2a2a2a</color>
+    <color name="color_blue">#72A0FF</color>
+    <color name="color_pink">#EE8B73</color>
+    <color name="color_green">#BFD26E</color>
 </resources>
